make app more responsive, fix flexbox childs sizes on small screens to prevent them from overflowing

--- a/styles/components.css
+++ b/styles/components.css
@@ -5,7 +5,7 @@
 
 .value-select {
     border-radius: var(--primaryBorderRadius);
-    font-size: var(--smallFont);
+    font-size: var(--mediumFont);
     background: none;
     color: inherit;
     padding: var(--smallMargin);
